--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/uuid": "^8.3.1",
     "peerjs": "^1.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
