--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@angular/core": "~12.2.0",
     "@angular/fire": "^7.0.4",
     "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.6",
+    "@angular/material": "^12.2.7",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@material/form-field": "^13.0.0",
+    "@types/jquery": "^3.5.6",
     "@types/uuid": "^8.3.1",
+    "bootstrap": "^5.1.1",
     "chokidar": "^3.5.2",
     "firebase": "^9.0.2",
     "glob-parent": "^6.0.1",
+    "jquery": "^3.6.0",
+    "ngx-material-spinner": "^12.0.0",
     "pac-proxy-agent": "^5.0.0",
     "pac-resolver": "^5.0.0",
     "peerjs": "^1.3.2",
