--- a/package.json
+++ b/package.json
@@ -21,18 +21,26 @@
     "@angular/material": "^12.2.8",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/pwa": "^12.2.9",
     "@angular/router": "~12.2.0",
+    "@angular/service-worker": "~12.2.0",
+    "@google-cloud/pubsub": "^2.18.1",
     "@material/form-field": "^13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@types/jquery": "^3.5.6",
     "@types/uuid": "^8.3.1",
+    "ansi-html": "^0.0.7",
     "bootstrap": "^5.1.1",
     "chokidar": "^3.5.2",
     "firebase": "^9.0.2",
     "glob-parent": "^6.0.1",
+    "google-auth-library": "^7.10.0",
+    "google-auto-auth": "^0.9.3",
+    "google-gax": "^2.27.0",
     "jquery": "^3.6.0",
     "ngx-material-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.3",
+    "ora": "^6.0.1",
     "pac-proxy-agent": "^5.0.0",
     "pac-resolver": "^5.0.0",
     "peerjs": "^1.3.2",
@@ -51,9 +59,9 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "firebase-tools": "^9.1.0",
+    "firebase-tools": "^9.20.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
+    "inquirer": "^8.2.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.8.0",
     "jsonc-parser": "^3.0.0",
