--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/uuid": "^8.3.1",
     "ansi-html": "^0.0.7",
     "bootstrap": "^5.1.1",
+    "cache-base": "^4.0.0",
     "chokidar": "^3.5.2",
     "firebase": "^9.0.2",
     "glob-parent": "^6.0.1",
@@ -47,6 +48,7 @@
     "proxy-agent": "^5.0.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
+    "set-value": "^4.1.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "webpack-dev-server": "^3.11.2",
@@ -59,7 +61,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "firebase-tools": "^9.20.0",
+    "firebase-tools": "^7.1.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.2.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
