--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+              "favicon-32x32.png",
+              "favicon-16x16.png",
+              "apple-touch-icon.png",
+              "src/img/favicon-32x32.png",
+              "src/img/favicon-16x16.png",
+              "src/img/apple-touch-icon.png",
               "src/assets",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest"
